--- a/notebooks/api_test.ipynb
+++ b/notebooks/api_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,31 +16,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Response [500]>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Request': 'Approved'}\n"
+     ]
     }
    ],
    "source": [
-    "url = 'http://127.0.0.1:5000/predict'\n",
+    "url = 'http://3.99.217.110:5000/predict'\n",
     "\n",
     "json_data =[{\n",
-    "    \"Credit_History\" : 80,\n",
-    "    \"ApplicantIncome\" : 10,\n",
-    "    \"CoapplicantIncome\" : 10,\n",
-    "    \"LoanAmount\" : 120,\n",
+    "    \"Credit_History\" : 1,\n",
+    "    \"ApplicantIncome\" : 90,\n",
+    "    \"CoapplicantIncome\" : 90,\n",
+    "    \"LoanAmount\" : 100,\n",
     "    \"Education\" : 'Graduate',\n",
-    "    \"Self_Employed\" : 'Yes',\n",
-    "    \"Gender\" : 'Male',\n",
+    "    \"Self_Employed\" : 'No',\n",
+    "    \"Gender\" : 'Female',\n",
     "    \"Married\" : 'No',\n",
     "    \"Dependants\" : 2,\n",
     "    \"Property_Area\" : 'Urban',\n",
@@ -48,34 +45,33 @@
     "    }]\n",
     "\n",
     "r = requests.post(url, json=json_data)\n",
-    "r\n",
-    "#print(r.json())\n"
+    "\n",
+    "print(r.json())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Approved\n"
+      "Request Approved\n"
      ]
     }
    ],
    "source": [
-    "model_columns = ['Credit_History', 'ApplicantIncome', 'CoapplicantIncome', 'LoanAmount',\n",
-    "                     'Education', 'Self_Employed', 'Gender', 'Married', 'Dependents', \n",
-    "                     'Property_Area','Loan_Amount_Term'] \n",
-    "\n",
-    "with open('./loan_predict.pickle', 'rb') as f:\n",
-    "      model = pickle.load(f)\n",
-    "\n",
     "query_ = pd.DataFrame(json_data)\n",
+    "model_columns = ['Credit_History', 'ApplicantIncome', 'CoapplicantIncome', 'LoanAmount',\n",
+    "                 'Education', 'Self_Employed', 'Gender', 'Married', 'Dependents', \n",
+    "                 'Property_Area','Loan_Amount_Term']\n",
     "query = query_.reindex(columns = model_columns, fill_value=0)\n",
-    "            \n",
+    "         \n",
+    "with open('./loan_predict.pickle', 'rb') as f:\n",
+    "    model = pickle.load(f)   \n",
+    "         \n",
     "query['CoapplicantIncome'] = query.CoapplicantIncome.astype('int')\n",
     "query['ApplicantIncome'] = query.ApplicantIncome.astype('int')\n",
     "query['Total_Income'] = query['ApplicantIncome'] + query['CoapplicantIncome']\n",
@@ -86,15 +82,15 @@
     "query['Property_Area'] = query.Property_Area.map({'Urban':0, 'Rural':1, 'Semiurban':2})\n",
     "query['Credit_History'] = query.Credit_History.astype('int64')\n",
     "query = query[['Credit_History', 'Self_Employed', 'Total_Income', \n",
-    "                'LoanAmount' , 'Property_Area', 'Education']]\n",
+    "               'LoanAmount' , 'Property_Area', 'Education']]\n",
     "            \n",
     "prediction = list(model.predict(query))\n",
-    "if prediction[0] == 0:\n",
+    "if prediction[0] == False:\n",
     "    prediction = \"Rejected\"\n",
-    "if prediction[0] == 1:\n",
+    "if prediction[0] == True:\n",
     "    prediction = \"Approved\"\n",
     "\n",
-    "print(prediction)"
+    "print(\"Request\", prediction)"
    ]
   }
  ],
